--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 	<target name="phpunit" depends="build">
 	<property file="TestStania.php" />
 		<echo>Rapports dans phpunit</echo>
-		<exec dir="C:\wamp\bin\php\php5.5.12" executable="phpunit.bat">
+		<exec dir="C:\wamp\bin\php\php5.5.12" executable="phing.bat">
 		<arg value="--testdox"/>
 		<arg value="C:\ProgramData\Jenkins\.jenkins\workspace\MonPremierJob\tests\TestStania.php"/>
 		
